deploy: bad0a6adfd8d3466f4a8efc515f7fb8a3138fc05

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 				"@type": "WebPage",
 				"publisher": {
 					"@type": "Organization",
-					"logo": { "@type": "ImageObject", "url": "/assets/images/logo.png" }
+					"logo": { "@type": "ImageObject", "url": "/assets/images/logo.jpg" }
 				},
 				"headline": "About BicycleTips.com",
 				"@context": "https://schema.org"
@@ -106,7 +106,7 @@
 			<div class="container pr-0">
 				<!-- Begin Logo -->
 				<a class="navbar-brand" href="/">
-					<img src="/assets/images/logo.png" alt="ProjectVW.com" />
+					<img src="/assets/images/logo.jpg" alt="ProjectVW.com" />
 				</a>
 				<!-- End Logo -->
 
@@ -240,7 +240,7 @@
 					<div class="container text-center">
 						<span
 							><img
-								src="/assets/images/logo.png"
+								src="/assets/images/logo.jpg"
 								alt="ProjectVW.com - 1973 Volkswagen Super Beetle"
 							/>
 							&nbsp; Never miss a <b>story</b> from us, subscribe to our
