--- a/about/index.html
+++ b/about/index.html
@@ -34,7 +34,7 @@
 				"@type": "WebSite",
 				"publisher": {
 					"@type": "Organization",
-					"logo": { "@type": "ImageObject", "url": "/assets/images/logo.png" }
+					"logo": { "@type": "ImageObject", "url": "/assets/images/logo.jpg" }
 				},
 				"headline": "About",
 				"name": "ProjectVW.com - 1973 Volkswagen Super Beetle",
@@ -105,7 +105,7 @@
 			<div class="container pr-0">
 				<!-- Begin Logo -->
 				<a class="navbar-brand" href="/">
-					<img src="/assets/images/logo.png" alt="ProjectVW.com" />
+					<img src="/assets/images/logo.jpg" alt="ProjectVW.com" />
 				</a>
 				<!-- End Logo -->
 
@@ -219,7 +219,7 @@
 					<div class="container text-center">
 						<span
 							><img
-								src="/assets/images/logo.png"
+								src="/assets/images/logo.jpg"
 								alt="ProjectVW.com - 1973 Volkswagen Super Beetle"
 							/>
 							&nbsp; Never miss a <b>story</b> from us, subscribe to our
