--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 				"@type": "WebPage",
 				"publisher": {
 					"@type": "Organization",
-					"logo": { "@type": "ImageObject", "url": "/assets/images/logo.png" }
+					"logo": { "@type": "ImageObject", "url": "/assets/images/logo.jpg" }
 				},
 				"headline": "404",
 				"@context": "https://schema.org"
@@ -104,7 +104,7 @@
 			<div class="container pr-0">
 				<!-- Begin Logo -->
 				<a class="navbar-brand" href="/">
-					<img src="/assets/images/logo.png" alt="ProjectVW.com" />
+					<img src="/assets/images/logo.jpg" alt="ProjectVW.com" />
 				</a>
 				<!-- End Logo -->
 
@@ -216,7 +216,7 @@
 					<div class="container text-center">
 						<span
 							><img
-								src="/assets/images/logo.png"
+								src="/assets/images/logo.jpg"
 								alt="ProjectVW.com - 1973 Volkswagen Super Beetle"
 							/>
 							&nbsp; Never miss a <b>story</b> from us, subscribe to our
