--- a/event-calendar.html
+++ b/event-calendar.html
@@ -37,7 +37,7 @@
 				"@type": "WebPage",
 				"publisher": {
 					"@type": "Organization",
-					"logo": { "@type": "ImageObject", "url": "/assets/images/logo.png" }
+					"logo": { "@type": "ImageObject", "url": "/assets/images/logo.jpg" }
 				},
 				"headline": "BicycleTips.com event-calendar",
 				"@context": "https://schema.org"
@@ -107,7 +107,7 @@
 			<div class="container pr-0">
 				<!-- Begin Logo -->
 				<a class="navbar-brand" href="/">
-					<img src="/assets/images/logo.png" alt="ProjectVW.com" />
+					<img src="/assets/images/logo.jpg" alt="ProjectVW.com" />
 				</a>
 				<!-- End Logo -->
 
@@ -244,7 +244,7 @@
 					<div class="container text-center">
 						<span
 							><img
-								src="/assets/images/logo.png"
+								src="/assets/images/logo.jpg"
 								alt="ProjectVW.com - 1973 Volkswagen Super Beetle"
 							/>
 							&nbsp; Never miss a <b>story</b> from us, subscribe to our
