--- a/1973-vw-super-beetle-wide-fenders.html
+++ b/1973-vw-super-beetle-wide-fenders.html
@@ -22,11 +22,11 @@
 		<meta property="og:locale" content="en_US" />
 		<meta
 			name="description"
-			content='When we were redoing our 1973 Super Beetle in the summer of 1998, I wanted to go with wider fenders. We ordered fiberglass fenders from a company called Innovations in Fiberglass. I don&#39;t know if they are still in business or not. We put 3" wider fenders on the rear of the car, and 2" wider on the front.&nbsp; Here&#39;s a shot of the front Here&#39;s a shot of the rear'
+			content='When we were redoing our 1973 Super Beetle in the summer of 1998, I wanted to go with wider fenders. We ordered fiberglass fenders from a company called Innovations in Fiberglass. I don&#39;t know if they are still in business or not. We put 3" wider fenders on the rear of the car, and 2" wider on the front.&nbsp; Here&#39;s a shot of the front'
 		/>
 		<meta
 			property="og:description"
-			content='When we were redoing our 1973 Super Beetle in the summer of 1998, I wanted to go with wider fenders. We ordered fiberglass fenders from a company called Innovations in Fiberglass. I don&#39;t know if they are still in business or not. We put 3" wider fenders on the rear of the car, and 2" wider on the front.&nbsp; Here&#39;s a shot of the front Here&#39;s a shot of the rear'
+			content='When we were redoing our 1973 Super Beetle in the summer of 1998, I wanted to go with wider fenders. We ordered fiberglass fenders from a company called Innovations in Fiberglass. I don&#39;t know if they are still in business or not. We put 3" wider fenders on the rear of the car, and 2" wider on the front.&nbsp; Here&#39;s a shot of the front'
 		/>
 		<meta
 			property="og:site_name"
@@ -50,7 +50,7 @@
 					"@type": "WebPage",
 					"@id": "/1973-vw-super-beetle-wide-fenders"
 				},
-				"description": "When we were redoing our 1973 Super Beetle in the summer of 1998, I wanted to go with wider fenders. We ordered fiberglass fenders from a company called Innovations in Fiberglass. I don&#39;t know if they are still in business or not. We put 3&quot; wider fenders on the rear of the car, and 2&quot; wider on the front.&nbsp; Here&#39;s a shot of the front Here&#39;s a shot of the rear",
+				"description": "When we were redoing our 1973 Super Beetle in the summer of 1998, I wanted to go with wider fenders. We ordered fiberglass fenders from a company called Innovations in Fiberglass. I don&#39;t know if they are still in business or not. We put 3&quot; wider fenders on the rear of the car, and 2&quot; wider on the front.&nbsp; Here&#39;s a shot of the front",
 				"url": "/1973-vw-super-beetle-wide-fenders",
 				"@type": "BlogPosting",
 				"publisher": {
@@ -264,13 +264,6 @@
 											</a>
 										</li>
 									</ul>
-
-									<div class="sep"></div>
-									<ul>
-										<li>
-											<a class="small smoothscroll" href="#disqus_thread"></a>
-										</li>
-									</ul>
 								</div>
 							</div>
 
@@ -286,16 +279,28 @@
 										>
 											<img
 												class="author-thumb"
-												src="https://www.gravatar.com/avatar/?s=250&d=mm&r=x"
-												alt=""
+												src="https://www.gravatar.com/avatar/bff097b7cc348bebce39ee1c7694d125?s=250&d=mm&r=x"
+												alt="Chris Hammond"
 											/>
 										</div>
 										<div
 											class="col-xs-12 col-md-9 col-lg-10 text-center text-md-left"
 										>
-											<a target="_blank" class="link-dark" href=""></a
-											><a target="_blank" href="" class="btn follow">Follow</a>
-											<span class="author-description"></span>
+											<a
+												target="_blank"
+												class="link-dark"
+												href="https://chrishammond.com"
+												>Chris Hammond</a
+											><a
+												target="_blank"
+												href="https://twitter.com/projectvw"
+												class="btn follow"
+												>Follow</a
+											>
+											<span class="author-description"
+												>Founder of ProjectVW.com. Read more at
+												ChrisHammond.com</span
+											>
 										</div>
 									</div>
 
@@ -356,6 +361,7 @@
 											charset="utf-8"
 										></script>
 									</p>
+
 									<p>Here&#39;s a shot of the rear</p>
 									<p>
 										<a
@@ -426,44 +432,6 @@
 
 					<!-- Begin Comments
 ================================================== -->
-
-					<div class="container">
-						<div id="comments" class="row justify-content-center mb-5">
-							<div class="col-md-8">
-								<section class="disqus">
-									<div id="disqus_thread"></div>
-									<script type="text/javascript">
-										var disqus_shortname = "";
-										var disqus_developer = 0;
-										(function () {
-											var dsq = document.createElement("script");
-											dsq.type = "text/javascript";
-											dsq.async = true;
-											dsq.src =
-												window.location.protocol +
-												"//" +
-												disqus_shortname +
-												".disqus.com/embed.js";
-											(
-												document.getElementsByTagName("head")[0] ||
-												document.getElementsByTagName("body")[0]
-											).appendChild(dsq);
-										})();
-									</script>
-									<noscript
-										>Please enable JavaScript to view the
-										<a href="http://disqus.com/?ref_noscript"
-											>comments powered by Disqus.</a
-										></noscript
-									>
-									<a href="http://disqus.com" class="dsq-brlink"
-										>comments powered by
-										<span class="logo-disqus">Disqus</span></a
-									>
-								</section>
-							</div>
-						</div>
-					</div>
 
 					<!--End Comments
 ================================================== -->
