deploy: c871df9cc5a899f2d151e98f1f9db2e9a092ddb2

--- a/1973-vw-super-beetle-wide-fenders.html
+++ b/1973-vw-super-beetle-wide-fenders.html
@@ -416,6 +416,12 @@
 										1332543365</a
 									>
 
+									<a
+										class="next d-block col-md-6 text-lg-right"
+										href="/1973-volkswagen-super-beetle-red"
+										>1973 Volkswagen Super Beetle Red &raquo;
+									</a>
+
 									<div class="clearfix"></div>
 								</div>
 								<!-- End Categories -->
@@ -461,7 +467,7 @@ https://search.google.com/structured-data/testing-tool/u/0/
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-sm-6 text-center text-lg-left">
-							Copyright © 2020 ProjectVW.com
+							Copyright © 2021 ProjectVW.com
 						</div>
 						<div class="col-md-6 col-sm-6 text-center text-lg-right">
 							<a target="_blank" href="https://www.christoc.com/"
