deploy: 0252e85fa5f2be06dea6534f72921114df35ba81

--- a/1973-volkswagen-super-beetle-red.html
+++ b/1973-volkswagen-super-beetle-red.html
@@ -360,6 +360,160 @@
 										applied. That was most likely the first vinyl I ever applied
 										to a car, lots more since.
 									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-1-800-23caf045c.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-1-400-23caf045c.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-1-600-23caf045c.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-1-800-23caf045c.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-1-1000-23caf045c.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-2-800-a0c7b817c.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-2-400-a0c7b817c.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-2-600-a0c7b817c.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-2-800-a0c7b817c.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-2-1000-a0c7b817c.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-3-800-ac11d573b.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-3-400-ac11d573b.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-3-600-ac11d573b.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-3-800-ac11d573b.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-3-1000-ac11d573b.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-4-800-6bdad1a24.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-4-400-6bdad1a24.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-4-600-6bdad1a24.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-4-800-6bdad1a24.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-4-1000-6bdad1a24.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-5-800-b5c1af4b0.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-5-400-b5c1af4b0.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-5-600-b5c1af4b0.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-5-800-b5c1af4b0.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-5-1000-b5c1af4b0.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-6-800-1f80f9d63.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-6-400-1f80f9d63.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-6-600-1f80f9d63.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-6-800-1f80f9d63.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-6-1000-1f80f9d63.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-7-800-a0c3dae01.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-7-400-a0c3dae01.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-7-600-a0c3dae01.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-7-800-a0c3dae01.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-7-1000-a0c3dae01.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-8-800-45d60b5c6.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-8-400-45d60b5c6.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-8-600-45d60b5c6.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-8-800-45d60b5c6.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-8-1000-45d60b5c6.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-9-800-b0e43a44c.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-9-400-b0e43a44c.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-9-600-b0e43a44c.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-9-800-b0e43a44c.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-9-1000-b0e43a44c.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-10-800-f974fb886.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-10-400-f974fb886.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-10-600-f974fb886.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-10-800-f974fb886.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-10-1000-f974fb886.jpg
+										1000w”&gt;
+									</p>
+
+									<p>
+										&lt;img
+										src=”/assets/images_out/red/RedSuperBeetle-11-800-40aac7efb.jpg”
+										alt=”“1973 Volkswagen Super Beetle””
+										srcset=”/assets/images_out/red/RedSuperBeetle-11-400-40aac7efb.jpg
+										400w,
+										/assets/images_out/red/RedSuperBeetle-11-600-40aac7efb.jpg
+										600w,
+										/assets/images_out/red/RedSuperBeetle-11-800-40aac7efb.jpg
+										800w,
+										/assets/images_out/red/RedSuperBeetle-11-1000-40aac7efb.jpg
+										1000w”&gt;
+									</p>
 								</div>
 
 								<!-- Rating -->
