deploy: 2221020c3db2773712ad37787cced154124e9a07

--- a/1973-volkswagen-super-beetle-red.html
+++ b/1973-volkswagen-super-beetle-red.html
@@ -364,7 +364,7 @@
 									<p>
 										&lt;img
 										src=”/assets/images_out/red/RedSuperBeetle-1-800-23caf045c.jpg”
-										alt=”“1973 Volkswagen Super Beetle””
+										alt=”“1973 Volkswagen Super Beetle” nomarkdown: true”
 										srcset=”/assets/images_out/red/RedSuperBeetle-1-400-23caf045c.jpg
 										400w,
 										/assets/images_out/red/RedSuperBeetle-1-600-23caf045c.jpg
