--- a/_posts/2021-01-11-1973-Volkswagen-Super-Beetle-Red.html
+++ b/_posts/2021-01-11-1973-Volkswagen-Super-Beetle-Red.html
@@ -9,15 +9,15 @@ author: chris
 comments: false
 featured: true
 ---
-Before the car was blue (painted in the summer of 1998 in Sedalia, Missouri), it was red.
+<p>Before the car was blue (painted in the summer of 1998 in Sedalia, Missouri), it was red.</p>
 
-It was a deep red, with a little sparkle to it. The car came this color when we acquired it in 1993(94?) in Fairfield, California. I honestly don't recall what the original color of the car was, likely a red or orange, but not the deep sparkly red it is in these photos.
+<p>It was a deep red, with a little sparkle to it. The car came this color when we acquired it in 1993(94?) in Fairfield, California. I honestly don't recall what the original color of the car was, likely a red or orange, but not the deep sparkly red it is in these photos.</p>
 
-These photos were most likely taken after I had washed the car out in front of the Lambda Chi Alpha Fraternity house in Rolla, Missouri. 
+<p>These photos were most likely taken after I had washed the car out in front of the Lambda Chi Alpha Fraternity house in Rolla, Missouri. </p>
 
-You can see the bra that I had on the car, I believe it was on it when we acquired the car. When was the last time you saw a bra on a car? If you need one for a Porsche Boxster I happen to have one, new in box here in my basement.
+<p>You can see the bra that I had on the car, I believe it was on it when we acquired the car. When was the last time you saw a bra on a car? If you need one for a Porsche Boxster I happen to have one, new in box here in my basement.</p>
 
-If you look closely at the hubcaps, you can see I painted them. I completely forgot I did that until looking at these photos. You'll also see a silver pinstripe on the car, it is just vinyl, something acquired from an autoparts store and applied. That was most likely the first vinyl I ever applied to a car, lots more since.
+<p>If you look closely at the hubcaps, you can see I painted them. I completely forgot I did that until looking at these photos. You'll also see a silver pinstripe on the car, it is just vinyl, something acquired from an autoparts store and applied. That was most likely the first vinyl I ever applied to a car, lots more since.</p>
 
 {% picture  red/RedSuperBeetle-1.jpg --alt "1973 Volkswagen Super Beetle" nomarkdown: true %} 
 {% picture  red/RedSuperBeetle-2.jpg --alt "1973 Volkswagen Super Beetle" %} 
