--- a/_posts/2021-01-11-1973-Volkswagen-Super-Beetle-Red.html
+++ b/_posts/2021-01-11-1973-Volkswagen-Super-Beetle-Red.html
@@ -19,7 +19,7 @@ featured: true
 
 <p>If you look closely at the hubcaps, you can see I painted them. I completely forgot I did that until looking at these photos. You'll also see a silver pinstripe on the car, it is just vinyl, something acquired from an autoparts store and applied. That was most likely the first vinyl I ever applied to a car, lots more since.</p>
 
-{% picture  red/RedSuperBeetle-1.jpg --alt "1973 Volkswagen Super Beetle" nomarkdown: true %} 
+{% picture  red/RedSuperBeetle-1.jpg --alt "1973 Volkswagen Super Beetle" %} 
 {% picture  red/RedSuperBeetle-2.jpg --alt "1973 Volkswagen Super Beetle" %} 
 {% picture  red/RedSuperBeetle-3.jpg --alt "1973 Volkswagen Super Beetle" %} 
 {% picture  red/RedSuperBeetle-4.jpg --alt "1973 Volkswagen Super Beetle" %} 
