deploy: 2ead7facc16840f8ee577f21438ae736a9db80bb

--- a/1973-volkswagen-super-beetle-red.html
+++ b/1973-volkswagen-super-beetle-red.html
@@ -361,6 +361,11 @@
 										to a car, lots more since.
 									</p>
 
+									<p>
+										I am still looking for this car if you happen to see it, let
+										me know! Chassis Number: 1332543365
+									</p>
+
 									<img
 									src="/assets/images_out/red/RedSuperBeetle-1-800-23caf045c.jpg"
 									alt=""1973 Volkswagen Super Beetle""
