--- a/1973-volkswagen-super-beetle-red.html
+++ b/1973-volkswagen-super-beetle-red.html
@@ -546,7 +546,7 @@ https://search.google.com/structured-data/testing-tool/u/0/
 							class="d-md-flex align-items-center justify-content-center h-100"
 						>
 							<h2 class="d-md-block align-self-center py-1 font-weight-light">
-								Explore Gravel <span class="d-none d-md-inline">→</span>
+								Explore ProjectVW <span class="d-none d-md-inline">→</span>
 							</h2>
 						</div>
 					</div>
