--- a/_posts/2021-06-29-Driving-To-Graduation.html
+++ b/_posts/2021-06-29-Driving-To-Graduation.html
@@ -3,7 +3,7 @@ layout: post
 title: 1973 Volkswagen Super Beetle Driving to Graduation
 date: '2021-6-29T21:03:10+00:00'
 permalink: "/driving-to-graduation"
-image: red/RedSuperBeetle-9.jpg
+image: GradVideo.JPG
 categories: ''
 author: chris
 comments: false
