deploy: 84a78bbdda33929324d29433a5ac070a08e6d6b7

--- a/index.html
+++ b/index.html
@@ -997,8 +997,8 @@
 							Copyright © 2022 ProjectVW.com
 						</div>
 						<div class="col-md-6 col-sm-6 text-center text-lg-right">
-							<a target="_blank" href="https://www.christoc.com/"
-								>Another site from Christoc.com</a
+							<a target="_blank" href="https://www.chrishammond.com/"
+								>Another site from Chris Hammond</a
 							>
 						</div>
 					</div>
