--- a/vw-jacked-up.html
+++ b/vw-jacked-up.html
@@ -10,15 +10,15 @@
 		<link rel="icon" href="/assets/images/logo.png" />
 
 		<title>
-			Find my first car - ProjectVW.com - 1973 Volkswagen Super Beetle
+			VW Jacked Up Graphic - ProjectVW.com - 1973 Volkswagen Super Beetle
 		</title>
-		<meta property="og:url" content="/find-my-first-car" />
+		<meta property="og:url" content="/vw-jacked-up" />
 		<meta
 			property="og:image"
-			content="/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg"
+			content="/assets/images_out/2022/jackedup-1028-1bdaba3d4.jpg"
 		/>
 		<meta property="og:type" content="article" />
-		<meta property="og:title" content="Find my first car" />
+		<meta property="og:title" content="VW Jacked Up Graphic" />
 		<meta property="og:description" content="" />
 
 		<link
@@ -186,7 +186,7 @@
 										<li class="ml-1 mr-1">
 											<a
 												target="_blank"
-												href="https://twitter.com/intent/tweet?text=Find my first car&url=/find-my-first-car"
+												href="https://twitter.com/intent/tweet?text=VW Jacked Up Graphic&url=/vw-jacked-up"
 												onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;"
 											>
 												<i class="fab fa-twitter"></i>
@@ -196,7 +196,7 @@
 										<li class="ml-1 mr-1">
 											<a
 												target="_blank"
-												href="https://facebook.com/sharer.php?u=/find-my-first-car"
+												href="https://facebook.com/sharer.php?u=/vw-jacked-up"
 												onclick="window.open(this.href, 'facebook-share', 'width=550,height=435');return false;"
 											>
 												<i class="fab fa-facebook-f"></i>
@@ -206,7 +206,7 @@
 										<li class="ml-1 mr-1">
 											<a
 												target="_blank"
-												href="https://www.linkedin.com/shareArticle?mini=true&url=/find-my-first-car"
+												href="https://www.linkedin.com/shareArticle?mini=true&url=/vw-jacked-up"
 												onclick="window.open(this.href, 'width=550,height=435');return false;"
 											>
 												<i class="fab fa-linkedin-in"></i>
@@ -254,7 +254,7 @@
 									</div>
 
 									<!-- Post Title -->
-									<h1 class="posttitle">Find my first car</h1>
+									<h1 class="posttitle">VW Jacked Up Graphic</h1>
 								</div>
 
 								<!-- Adsense if enabled from _config.yml (change your pub id and slot) -->
@@ -265,11 +265,13 @@
 
 								<img
 									class="featured-image img-fluid lazyimg"
-									src="/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg"
-									alt="Find my first car"
+									src="/assets/images_out/2022/jackedup-800-1bdaba3d4.jpg"
+									alt="VW Jacked Up Graphic"
 									srcset="
-										/assets/images_out/2022/frntlowsid-200-7ea98ba1b.jpg 200w,
-										/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg 300w
+										/assets/images_out/2022/jackedup-200-1bdaba3d4.jpg   200w,
+										/assets/images_out/2022/jackedup-400-1bdaba3d4.jpg   400w,
+										/assets/images_out/2022/jackedup-800-1bdaba3d4.jpg   800w,
+										/assets/images_out/2022/jackedup-1028-1bdaba3d4.jpg 1028w
 									"
 								/>
 
@@ -281,27 +283,11 @@
 
 									<!-- End Toc -->
 									<p>
-										I’ll offer up a $250 cash reward for someone who can put me
-										in touch with someone that can be verified as the owner of
-										my first car, a 1973 VW Super Beetle, chassis number
-										1332543365.
+										I found this photo while going through old files (I never
+										throw anything away, or delete). After a quick google
+										search, I can’t find it anywhere else on the web, so I
+										figured I would post it here.
 									</p>
-
-									<p>
-										I’ll pay $100 for someone who WAS previously an owner of the
-										car (verified) that might lead me to the current owner.
-									</p>
-
-									<p>Chassis Number: 1332543365</p>
-
-									<p>
-										Can you help me find it?
-										<a href="https://www.chrishammond.com/Contact"
-											>Contact Chris</a
-										>
-									</p>
-
-									<p>Chassis Number: 1332543365</p>
 								</div>
 
 								<!-- Rating -->
@@ -333,15 +319,9 @@
 								<div
 									class="row PageNavigation d-flex justify-content-between font-weight-bold"
 								>
-									<a class="prev d-block col-md-6" href="/find-my-vw">
-										&laquo; Help me find my VW Super Beetle</a
+									<a class="prev d-block col-md-6" href="/find-my-first-car">
+										&laquo; Find my first car</a
 									>
-
-									<a
-										class="next d-block col-md-6 text-lg-right"
-										href="/vw-jacked-up"
-										>VW Jacked Up Graphic &raquo;
-									</a>
 
 									<div class="clearfix"></div>
 								</div>
