deploy: 99a234fbad0771705709861c991bf2e0ffbb5aea

--- a/vw-chassis-number-133-2543-365.html
+++ b/vw-chassis-number-133-2543-365.html
@@ -289,6 +289,13 @@
 										>
 									</p>
 
+									<p>
+										We purchased the car in 1994 (maybe 1993?) in Fairfield,
+										California. As far as I know, at the time the car was
+										matching engine/chassis/transmission, but it had been
+										repainted at some point prior to us acquiring it.
+									</p>
+
 									<h2 id="1973-super-beetle">1973 Super Beetle</h2>
 
 									<p>Model: Manual Transmission (early 73):</p>
