--- a/about.html
+++ b/about.html
@@ -178,6 +178,11 @@
 
 						<div class="article-post">
 							<p>
+								Do you know
+								<a href="https://www.chrishammond.com/">Chris Hammond</a>?
+							</p>
+
+							<p>
 								So you want to know about ProjectVW.com?
 								<a href="/have-you-seen-my-1973-vw-super-beetle-vIN-1332543365"
 									>You should read our story</a
