--- a/_posts/2021-01-11-1973-Volkswagen-Super-Beetle-Red.html
+++ b/_posts/2021-01-11-1973-Volkswagen-Super-Beetle-Red.html
@@ -7,7 +7,7 @@ image: red/RedSuperBeetle-9.jpg
 categories: ''
 author: chris
 comments: false
-featured: true
+featured: false
 ---
 <p>Before the car was blue (painted in the summer of 1998 in Sedalia, Missouri), it was red.</p>
 
