--- a/_posts/2021-06-29-Driving-To-Graduation.html
+++ b/_posts/2021-06-29-Driving-To-Graduation.html
@@ -7,7 +7,7 @@ image: GradVideo.JPG
 categories: ''
 author: chris
 comments: false
-featured: true
+featured: false
 ---
 <p>Video of the car as I headed off to my high school graduation, June 1995..</p>
 
