Updates for keywords

--- a/_posts/2021-06-29-Driving-To-Graduation.html
+++ b/_posts/2021-06-29-Driving-To-Graduation.html
@@ -8,6 +8,7 @@ categories: ''
 author: chris
 comments: false
 featured: false
+keywords: "vw, beetle, super beetle, find my car, first car, graduation"
 ---
 <p>Video of the car as I headed off to my high school graduation, June 1995..</p>
 
