--- a/1973-vw-super-beetle-wide-fenders.html
+++ b/1973-vw-super-beetle-wide-fenders.html
@@ -101,6 +101,11 @@
 		<!-- End Jekyll SEO tag -->
 
 		<link
+			rel="canonical"
+			href="https://www.projectvw.com/1973-vw-super-beetle-wide-fenders"
+		/>
+
+		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
 			integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
