--- a/about.html
+++ b/about.html
@@ -65,6 +65,8 @@
 		</script>
 		<!-- End Jekyll SEO tag -->
 
+		<link rel="canonical" href="https://www.projectvw.com/about" />
+
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
