--- a/driving-to-graduation.html
+++ b/driving-to-graduation.html
@@ -105,6 +105,16 @@
 		</script>
 		<!-- End Jekyll SEO tag -->
 
+		<meta
+			name="keywords"
+			content="vw, beetle, super beetle, find my car, first car, graduation"
+		/>
+
+		<link
+			rel="canonical"
+			href="https://www.projectvw.com/driving-to-graduation"
+		/>
+
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
