--- a/find-my-first-car.html
+++ b/find-my-first-car.html
@@ -93,6 +93,13 @@
 		</script>
 		<!-- End Jekyll SEO tag -->
 
+		<meta
+			name="keywords"
+			content="vw, beetle, super beetle, find my car, first car, superbeetle, volkswagen"
+		/>
+
+		<link rel="canonical" href="https://www.projectvw.com/find-my-first-car" />
+
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
