--- a/redub.html
+++ b/redub.html
@@ -88,6 +88,13 @@
 		</script>
 		<!-- End Jekyll SEO tag -->
 
+		<meta
+			name="keywords"
+			content="vw, beetle, mid-engine, mk7, golf, gti, doyle, motorworks"
+		/>
+
+		<link rel="canonical" href="https://www.projectvw.com/redub" />
+
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
