--- a/vw-chassis-number-133-2543-365.html
+++ b/vw-chassis-number-133-2543-365.html
@@ -100,6 +100,16 @@
 		</script>
 		<!-- End Jekyll SEO tag -->
 
+		<meta
+			name="keywords"
+			content="vw, beetle, super beetle, 1973, 133 2543 365, show, carshow"
+		/>
+
+		<link
+			rel="canonical"
+			href="https://www.projectvw.com/vw-chassis-number-133-2543-365"
+		/>
+
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
