--- a/vw-jacked-up.html
+++ b/vw-jacked-up.html
@@ -90,6 +90,8 @@
 		</script>
 		<!-- End Jekyll SEO tag -->
 
+		<link rel="canonical" href="https://www.projectvw.com/vw-jacked-up" />
+
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
