--- a/wide-super-beetle.html
+++ b/wide-super-beetle.html
@@ -97,6 +97,13 @@
 		</script>
 		<!-- End Jekyll SEO tag -->
 
+		<meta
+			name="keywords"
+			content="vw, beetle, super beetle, find my car, first car, superbeetle, volkswagen, wide"
+		/>
+
+		<link rel="canonical" href="https://www.projectvw.com/wide-super-beetle" />
+
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
