deploy: 891874f4016a761737d2662691bad0418ac968ca

--- a/1973-vw-super-beetle-wide-fenders.html
+++ b/1973-vw-super-beetle-wide-fenders.html
@@ -31,15 +31,10 @@
 			property="og:url"
 			content="https://www.projectvw.com/1973-vw-super-beetle-wide-fenders"
 		/>
-		<meta property="og:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/VWFenders-600-18aee059d.jpg"
-			srcset="
-				/assets/images_out/VWFenders-400-18aee059d.jpg 400w,
-				/assets/images_out/VWFenders-600-18aee059d.jpg 600w
-			"
+		<meta
+			property="og:image"
+			content="https://www.projectvw.com/assets/images_out/VWFenders-600-18aee059d.jpg"
 		/>
-		" />
 
 		<meta property="og:type" content="article" />
 
@@ -65,15 +60,10 @@
 			name="twitter:description"
 			content="Have you seen my 1973 VW Super Beetle?"
 		/>
-		<meta name="twitter:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/VWFenders-600-18aee059d.jpg"
-			srcset="
-				/assets/images_out/VWFenders-400-18aee059d.jpg 400w,
-				/assets/images_out/VWFenders-600-18aee059d.jpg 600w
-			"
+		<meta
+			name="twitter:image"
+			content="https://www.projectvw.com/assets/images_out/VWFenders-600-18aee059d.jpg"
 		/>
-		">
 
 		<meta name="keywords" content="" />
 		<link
@@ -307,6 +297,7 @@
 									src="/assets/images_out/VWFenders-600-18aee059d.jpg"
 									alt="1973 VW Super Beetle Wide Fenders"
 									srcset="
+										/assets/images_out/VWFenders-200-18aee059d.jpg 200w,
 										/assets/images_out/VWFenders-400-18aee059d.jpg 400w,
 										/assets/images_out/VWFenders-600-18aee059d.jpg 600w
 									"
