--- a/driving-to-graduation.html
+++ b/driving-to-graduation.html
@@ -31,17 +31,10 @@
 			property="og:url"
 			content="https://www.projectvw.com/driving-to-graduation"
 		/>
-		<meta property="og:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/GradVideo-800-8d85b3d03.jpg"
-			srcset="
-				/assets/images_out/GradVideo-400-8d85b3d03.jpg   400w,
-				/assets/images_out/GradVideo-600-8d85b3d03.jpg   600w,
-				/assets/images_out/GradVideo-800-8d85b3d03.jpg   800w,
-				/assets/images_out/GradVideo-1000-8d85b3d03.jpg 1000w
-			"
+		<meta
+			property="og:image"
+			content="https://www.projectvw.com/assets/images_out/GradVideo-1600-8d85b3d03.jpg"
 		/>
-		" />
 
 		<meta property="og:type" content="article" />
 
@@ -67,17 +60,10 @@
 			name="twitter:description"
 			content="Have you seen my 1973 VW Super Beetle?"
 		/>
-		<meta name="twitter:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/GradVideo-800-8d85b3d03.jpg"
-			srcset="
-				/assets/images_out/GradVideo-400-8d85b3d03.jpg   400w,
-				/assets/images_out/GradVideo-600-8d85b3d03.jpg   600w,
-				/assets/images_out/GradVideo-800-8d85b3d03.jpg   800w,
-				/assets/images_out/GradVideo-1000-8d85b3d03.jpg 1000w
-			"
+		<meta
+			name="twitter:image"
+			content="https://www.projectvw.com/assets/images_out/GradVideo-1600-8d85b3d03.jpg"
 		/>
-		">
 
 		<meta
 			name="keywords"
@@ -316,10 +302,11 @@
 									src="/assets/images_out/GradVideo-800-8d85b3d03.jpg"
 									alt="1973 Volkswagen Super Beetle Driving to Graduation"
 									srcset="
+										/assets/images_out/GradVideo-200-8d85b3d03.jpg   200w,
 										/assets/images_out/GradVideo-400-8d85b3d03.jpg   400w,
-										/assets/images_out/GradVideo-600-8d85b3d03.jpg   600w,
 										/assets/images_out/GradVideo-800-8d85b3d03.jpg   800w,
-										/assets/images_out/GradVideo-1000-8d85b3d03.jpg 1000w
+										/assets/images_out/GradVideo-1600-8d85b3d03.jpg 1600w,
+										/assets/images_out/GradVideo-1758-8d85b3d03.jpg 1758w
 									"
 								/>
 
