--- a/find-my-first-car.html
+++ b/find-my-first-car.html
@@ -30,12 +30,10 @@
 			property="og:url"
 			content="https://www.projectvw.com/find-my-first-car"
 		/>
-		<meta property="og:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg"
-			srcset="/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg 300w"
+		<meta
+			property="og:image"
+			content="https://www.projectvw.com/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg"
 		/>
-		" />
 
 		<meta property="og:type" content="article" />
 
@@ -61,12 +59,10 @@
 			name="twitter:description"
 			content="Have you seen my 1973 VW Super Beetle?"
 		/>
-		<meta name="twitter:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg"
-			srcset="/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg 300w"
+		<meta
+			name="twitter:image"
+			content="https://www.projectvw.com/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg"
 		/>
-		">
 
 		<meta
 			name="keywords"
@@ -300,6 +296,7 @@
 									src="/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg"
 									alt="Find my first car"
 									srcset="
+										/assets/images_out/2022/frntlowsid-200-7ea98ba1b.jpg 200w,
 										/assets/images_out/2022/frntlowsid-300-7ea98ba1b.jpg 300w
 									"
 								/>
