--- a/find-my-vw.html
+++ b/find-my-vw.html
@@ -28,12 +28,10 @@
 		<link rel="icon" href="assets/images/logo.jpg" />
 
 		<meta property="og:url" content="https://www.projectvw.com/find-my-vw" />
-		<meta property="og:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2022/fs-ext1-400-2e604419f.jpg"
-			srcset="/assets/images_out/2022/fs-ext1-400-2e604419f.jpg 400w"
+		<meta
+			property="og:image"
+			content="https://www.projectvw.com/assets/images_out/2022/fs-ext1-400-2e604419f.jpg"
 		/>
-		" />
 
 		<meta property="og:type" content="article" />
 
@@ -59,12 +57,10 @@
 			name="twitter:description"
 			content="Have you seen my 1973 VW Super Beetle?"
 		/>
-		<meta name="twitter:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2022/fs-ext1-400-2e604419f.jpg"
-			srcset="/assets/images_out/2022/fs-ext1-400-2e604419f.jpg 400w"
+		<meta
+			name="twitter:image"
+			content="https://www.projectvw.com/assets/images_out/2022/fs-ext1-400-2e604419f.jpg"
 		/>
-		">
 
 		<meta
 			name="keywords"
@@ -298,6 +294,7 @@
 									src="/assets/images_out/2022/fs-ext1-400-2e604419f.jpg"
 									alt="Help me find my VW Super Beetle"
 									srcset="
+										/assets/images_out/2022/fs-ext1-200-2e604419f.jpg 200w,
 										/assets/images_out/2022/fs-ext1-400-2e604419f.jpg 400w
 									"
 								/>
