--- a/redub.html
+++ b/redub.html
@@ -25,17 +25,10 @@
 		<link rel="icon" href="assets/images/logo.jpg" />
 
 		<meta property="og:url" content="https://www.projectvw.com/redub" />
-		<meta property="og:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2023/redub-800-bffdd412f.jpg"
-			srcset="
-				/assets/images_out/2023/redub-400-bffdd412f.jpg   400w,
-				/assets/images_out/2023/redub-600-bffdd412f.jpg   600w,
-				/assets/images_out/2023/redub-800-bffdd412f.jpg   800w,
-				/assets/images_out/2023/redub-1000-bffdd412f.jpg 1000w
-			"
+		<meta
+			property="og:image"
+			content="https://www.projectvw.com/assets/images_out/2023/redub-1600-bffdd412f.jpg"
 		/>
-		" />
 
 		<meta property="og:type" content="article" />
 
@@ -61,17 +54,10 @@
 			name="twitter:description"
 			content="Have you seen my 1973 VW Super Beetle?"
 		/>
-		<meta name="twitter:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2023/redub-800-bffdd412f.jpg"
-			srcset="
-				/assets/images_out/2023/redub-400-bffdd412f.jpg   400w,
-				/assets/images_out/2023/redub-600-bffdd412f.jpg   600w,
-				/assets/images_out/2023/redub-800-bffdd412f.jpg   800w,
-				/assets/images_out/2023/redub-1000-bffdd412f.jpg 1000w
-			"
+		<meta
+			name="twitter:image"
+			content="https://www.projectvw.com/assets/images_out/2023/redub-1600-bffdd412f.jpg"
 		/>
-		">
 
 		<meta
 			name="keywords"
@@ -305,10 +291,11 @@
 									src="/assets/images_out/2023/redub-800-bffdd412f.jpg"
 									alt="VeeDub ReDub"
 									srcset="
+										/assets/images_out/2023/redub-200-bffdd412f.jpg   200w,
 										/assets/images_out/2023/redub-400-bffdd412f.jpg   400w,
-										/assets/images_out/2023/redub-600-bffdd412f.jpg   600w,
 										/assets/images_out/2023/redub-800-bffdd412f.jpg   800w,
-										/assets/images_out/2023/redub-1000-bffdd412f.jpg 1000w
+										/assets/images_out/2023/redub-1600-bffdd412f.jpg 1600w,
+										/assets/images_out/2023/redub-2000-bffdd412f.jpg 2000w
 									"
 								/>
 
