--- a/vw-chassis-number-133-2543-365.html
+++ b/vw-chassis-number-133-2543-365.html
@@ -31,16 +31,10 @@
 			property="og:url"
 			content="https://www.projectvw.com/vw-chassis-number-133-2543-365"
 		/>
-		<meta property="og:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2023/133-2543-365-640-70ee5c7e4.jpg"
-			srcset="
-				/assets/images_out/2023/133-2543-365-400-70ee5c7e4.jpg 400w,
-				/assets/images_out/2023/133-2543-365-600-70ee5c7e4.jpg 600w,
-				/assets/images_out/2023/133-2543-365-640-70ee5c7e4.jpg 640w
-			"
+		<meta
+			property="og:image"
+			content="https://www.projectvw.com/assets/images_out/2023/133-2543-365-640-70ee5c7e4.jpg"
 		/>
-		" />
 
 		<meta property="og:type" content="article" />
 
@@ -66,16 +60,10 @@
 			name="twitter:description"
 			content="Have you seen my 1973 VW Super Beetle?"
 		/>
-		<meta name="twitter:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2023/133-2543-365-640-70ee5c7e4.jpg"
-			srcset="
-				/assets/images_out/2023/133-2543-365-400-70ee5c7e4.jpg 400w,
-				/assets/images_out/2023/133-2543-365-600-70ee5c7e4.jpg 600w,
-				/assets/images_out/2023/133-2543-365-640-70ee5c7e4.jpg 640w
-			"
+		<meta
+			name="twitter:image"
+			content="https://www.projectvw.com/assets/images_out/2023/133-2543-365-640-70ee5c7e4.jpg"
 		/>
-		">
 
 		<meta
 			name="keywords"
@@ -312,8 +300,8 @@
 									src="/assets/images_out/2023/133-2543-365-640-70ee5c7e4.jpg"
 									alt="1973 VW Super Beetle 133 2543 365"
 									srcset="
+										/assets/images_out/2023/133-2543-365-200-70ee5c7e4.jpg 200w,
 										/assets/images_out/2023/133-2543-365-400-70ee5c7e4.jpg 400w,
-										/assets/images_out/2023/133-2543-365-600-70ee5c7e4.jpg 600w,
 										/assets/images_out/2023/133-2543-365-640-70ee5c7e4.jpg 640w
 									"
 								/>
