--- a/wide-super-beetle.html
+++ b/wide-super-beetle.html
@@ -31,16 +31,10 @@
 			property="og:url"
 			content="https://www.projectvw.com/wide-super-beetle"
 		/>
-		<meta property="og:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg"
-			srcset="
-				/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-400-68f950238.jpg 400w,
-				/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-600-68f950238.jpg 600w,
-				/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg 640w
-			"
+		<meta
+			property="og:image"
+			content="https://www.projectvw.com/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg"
 		/>
-		" />
 
 		<meta property="og:type" content="article" />
 
@@ -66,16 +60,10 @@
 			name="twitter:description"
 			content="Have you seen my 1973 VW Super Beetle?"
 		/>
-		<meta name="twitter:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg"
-			srcset="
-				/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-400-68f950238.jpg 400w,
-				/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-600-68f950238.jpg 600w,
-				/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg 640w
-			"
+		<meta
+			name="twitter:image"
+			content="https://www.projectvw.com/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg"
 		/>
-		">
 
 		<meta
 			name="keywords"
@@ -309,8 +297,8 @@
 									src="/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg"
 									alt="1973 Volkswagen Wide Super Beetle"
 									srcset="
+										/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-200-68f950238.jpg 200w,
 										/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-400-68f950238.jpg 400w,
-										/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-600-68f950238.jpg 600w,
 										/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg 640w
 									"
 								/>
@@ -348,8 +336,8 @@
 											src="/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg"
 											alt="Front end 1973 Super Beetle Wider Fenders"
 											srcset="
+												/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-200-68f950238.jpg 200w,
 												/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-400-68f950238.jpg 400w,
-												/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-600-68f950238.jpg 600w,
 												/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-2-640-68f950238.jpg 640w
 											"
 										/>
@@ -360,8 +348,8 @@
 											src="/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-1-640-afbd48bbf.jpg"
 											alt="Rear end 1973 Super Beetle Wider Fenders"
 											srcset="
+												/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-1-200-afbd48bbf.jpg 200w,
 												/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-1-400-afbd48bbf.jpg 400w,
-												/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-1-600-afbd48bbf.jpg 600w,
 												/assets/images_out/2022/Wide-Super-Beetle/Wide-Super-Beetle-1-640-afbd48bbf.jpg 640w
 											"
 										/>
