--- a/vw-jacked-up.html
+++ b/vw-jacked-up.html
@@ -27,17 +27,10 @@
 		<link rel="icon" href="assets/images/logo.jpg" />
 
 		<meta property="og:url" content="https://www.projectvw.com/vw-jacked-up" />
-		<meta property="og:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2022/jackedup-800-1bdaba3d4.jpg"
-			srcset="
-				/assets/images_out/2022/jackedup-400-1bdaba3d4.jpg   400w,
-				/assets/images_out/2022/jackedup-600-1bdaba3d4.jpg   600w,
-				/assets/images_out/2022/jackedup-800-1bdaba3d4.jpg   800w,
-				/assets/images_out/2022/jackedup-1000-1bdaba3d4.jpg 1000w
-			"
+		<meta
+			property="og:image"
+			content="https://www.projectvw.com/assets/images_out/2022/jackedup-1028-1bdaba3d4.jpg"
 		/>
-		" />
 
 		<meta property="og:type" content="article" />
 
@@ -63,17 +56,10 @@
 			name="twitter:description"
 			content="Have you seen my 1973 VW Super Beetle?"
 		/>
-		<meta name="twitter:image" content="https://www.projectvw.com
-		<img
-			src="/assets/images_out/2022/jackedup-800-1bdaba3d4.jpg"
-			srcset="
-				/assets/images_out/2022/jackedup-400-1bdaba3d4.jpg   400w,
-				/assets/images_out/2022/jackedup-600-1bdaba3d4.jpg   600w,
-				/assets/images_out/2022/jackedup-800-1bdaba3d4.jpg   800w,
-				/assets/images_out/2022/jackedup-1000-1bdaba3d4.jpg 1000w
-			"
+		<meta
+			name="twitter:image"
+			content="https://www.projectvw.com/assets/images_out/2022/jackedup-1028-1bdaba3d4.jpg"
 		/>
-		">
 
 		<meta name="keywords" content="" />
 		<link rel="canonical" href="https://www.projectvw.com/vw-jacked-up" />
@@ -304,10 +290,10 @@
 									src="/assets/images_out/2022/jackedup-800-1bdaba3d4.jpg"
 									alt="VW Jacked Up Graphic"
 									srcset="
+										/assets/images_out/2022/jackedup-200-1bdaba3d4.jpg   200w,
 										/assets/images_out/2022/jackedup-400-1bdaba3d4.jpg   400w,
-										/assets/images_out/2022/jackedup-600-1bdaba3d4.jpg   600w,
 										/assets/images_out/2022/jackedup-800-1bdaba3d4.jpg   800w,
-										/assets/images_out/2022/jackedup-1000-1bdaba3d4.jpg 1000w
+										/assets/images_out/2022/jackedup-1028-1bdaba3d4.jpg 1028w
 									"
 								/>
 
