--- a/_posts/2021-01-11-1973-Volkswagen-Super-Beetle-Red.html
+++ b/_posts/2021-01-11-1973-Volkswagen-Super-Beetle-Red.html
@@ -4,7 +4,7 @@ title: 1973 Volkswagen Super Beetle Red
 date: '2021-1-11T00:03:10+00:00'
 permalink: "/1973-volkswagen-super-beetle-red"
 image: red/RedSuperBeetle-9.jpg
-categories: ''
+categories: [ vw, superbeetle ]
 author: chris
 comments: false
 featured: false
