--- a/_posts/2021-06-29-Driving-To-Graduation.html
+++ b/_posts/2021-06-29-Driving-To-Graduation.html
@@ -4,7 +4,7 @@ title: 1973 Volkswagen Super Beetle Driving to Graduation
 date: '2021-6-29T21:03:10+00:00'
 permalink: "/driving-to-graduation"
 image: GradVideo.JPG
-categories: ''
+categories: [ vw, superbeetle ]
 author: chris
 comments: false
 featured: false
